tests/baselines/reference/noImplicitAnyInCastExpression.errors.txt
tests/cases/compiler/noImplicitAnyInCastExpression.ts(16,2): error TS2323: Type '{ c: null; }' is not comparable with type 'IFoo'.
  Property 'a' is missing in type '{ c: null; }'.


==== tests/cases/compiler/noImplicitAnyInCastExpression.ts (1 errors) ====
    
    // verify no noImplictAny errors reported with cast expression
    
    interface IFoo {
        a: number;
        b: string;
    }
    
    // Expr type not assignable to target type
    (<IFoo>{ a: null });
    
    // Expr type assignable to target type
    (<IFoo>{ a: 2, b: undefined });
    
    // Neither types is assignable to each other
    (<IFoo>{ c: null });
     ~~~~~~~~~~~~~~~~~
!!! error TS2323: Type '{ c: null; }' is not comparable with type 'IFoo'.
!!! error TS2323:   Property 'a' is missing in type '{ c: null; }'.